Tighten profile section at small displays, fix profile pic alignment

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -132,7 +132,7 @@ hr {
 }
 
 .nav > li > a {
-  padding: 8px 15px;
+  padding: 8px 5px;
 }
 
 .nav > li > a:hover,
